@@ -15,6 +15,7 @@ Package/Installer
 - PACKAGE_METADATA_PARTIAL
 - PACKAGE_SIGNING_INFO_UNAVAILABLE
 - EXECUTION_WITHHELD_INSTALLER
+- PACKAGE_EXTERNAL_REF_PRESENT (adapter findings signal)
 
 Extension
 - EXTENSION_ADAPTER_V1
